--- a/src/app/shared/components/digital-invoice/digital-invoice.component.css
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.css
@@ -4,8 +4,16 @@
     opacity: 0.6;
 }
 
+.tg  {border-collapse:collapse;border-spacing:0;}
+.tg td{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg th{border-color:black;border-style:solid;border-width:1px;font-family:Arial, sans-serif;font-size:14px;
+    font-weight:normal;overflow:hidden;padding:10px 5px;word-break:normal;}
+.tg .tg-0lax{text-align:left;vertical-align:top}
+        
+
 .grid-container {
-    display: grid;
+    display: grid; 
     grid-template-columns: 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 1px 1px;
@@ -84,10 +92,10 @@
 
 .resumen-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr;
     grid-template-rows: 1fr;
     gap: 1px 1px;
-    grid-template-areas: ". . . . .";
+    grid-template-areas: ". . .";
     width: 80%;
     margin: auto;
     margin-top: 5px;
@@ -99,7 +107,6 @@
     flex-direction: column;
     align-items: center;
     margin-right: 1%;
-    border-radius: 15%;
 }
 
 .etiqueta-consumo {
@@ -123,10 +130,10 @@
 
 .detalle-container {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr 1fr;
+    grid-template-columns: 1fr ;
     grid-template-rows: 1fr;
     gap: 1px 1px;
-    grid-template-areas: ". . . . . . .";
+    grid-template-areas: ".";
     margin-top: 3px;
     width: 80%;
     margin: auto;
@@ -173,7 +180,7 @@
 .calculo-consumo-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 0.3fr 0.3fr 0.3fr;
+    grid-template-rows: 0.3fr;
     gap: 1px 1px;
     grid-template-areas: ".";
     margin-top: 5px;
@@ -189,7 +196,7 @@
 .historico-consumo-container {
     display: grid;
     grid-template-columns: 1fr;
-    grid-template-rows: 1fr 0.1fr 0.1fr;
+    grid-template-rows: 1fr;
     gap: 1px 1px;
     grid-template-areas: ".";
     margin-top: 5px;
