implementando grafico en recibo

--- a/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
+++ b/src/app/modules/menu-layout/components/issued-invoices/issued-invoices.component.html
@@ -31,7 +31,7 @@
             </td>
             <td>{{data.codigo}}</td>
             <td>{{ data.codigoContrato }}</td>
-            <td>{{data.actorNombre}}</td>
+            <td>{{data.cliente}}</td>
             <td>{{data.fechaLectura  | date:'dd/M/yyyy'  }}</td>
             <td>{{ data.energiaConsumida }}</td>
             <td style="color: red;">{{data.total + "  LPS"}}</td>
