--- a/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
+++ b/src/app/modules/menu-layout/components/cancelled-invoices/cancelled-invoices.component.html
@@ -23,7 +23,7 @@
           <tr *ngFor="let data of filterTable.data">
             <td>{{data.codigo}}</td>
             <td>{{ data.codigoContrato }}</td>
-            <td>{{data.actorNombre}}</td>
+            <td>{{data.cliente}}</td>
             <td>{{data.fechaLectura  | date:'dd/M/yyyy'  }}</td>
             <td>{{ data.energiaConsumida }}</td>
             <td style="color: red;">{{ data.total }}</td>
