--- a/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
+++ b/src/app/modules/menu-layout/components/generated-invoices/generated-invoices.component.html
@@ -86,7 +86,7 @@
             </ng-template>
             
             <td nzRight nzAlign="center">
-                <button nz-button nzSize="small" nzType="primary" ><i nz-icon nzType="check"></i></button>
+                <button nz-button nzSize="small" nzType="primary" (click)="EmitirFactura(data)"><i nz-icon nzType="check"></i></button>
             </td>
             <td nzRight nzAlign="center">
               <button nz-button nzSize="small" nzType="primary" (click)="GenerateInvoice(data)"><i nz-icon nzType="file-done"></i></button>
@@ -103,5 +103,5 @@
 
 <div *ngIf="FacturaIsVisible"> 
   <button class="back-btn" nz-button nzType="primary" (click)="Back()"><i nz-icon nzType="arrow-left"></i></button>
-  <app-digital-invoice [dataInvoice]="dataInvoice"></app-digital-invoice>
+  <app-digital-invoice [dataInvoice]="dataInvoice" [dataSource]="dataSource" [historicData]="historicData"></app-digital-invoice>
 </div>
