--- a/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
@@ -93,8 +93,8 @@
                 <nz-table #nzTable [nzData]="listOfData" nzTableLayout="fixed">
                   <thead>
                     <tr>
-                      <th nzWidth="80px">
-                        ID
+                      <th nzWidth="90px">
+                        Acciones
                       </th>
                       <th nzWidth="100px">Medidor</th>
                       <th nzWidth="100px">Variable</th>
@@ -109,10 +109,39 @@
                   </thead>
                   <tbody>
                     <tr *ngFor="let data of nzTable.data">
-                      <td>{{ data.id }}</td>
+                      <td>
+                        <div nz-col>
+                          <div *ngIf="data.estado; else disablesList"> 
+                              <button nzSize="small" nz-button nzType="primary" nzDanger
+                              nz-popconfirm
+                              nzPopconfirmTitle="Estas seguro que quieres deshabilitarlo?"
+                              (nzOnConfirm)="disable(data, false)"
+                              (nzOnCancel)="cancel()"
+                              nzPopconfirmPlacement="rightBottom"
+                              nz-button
+                              
+                              ><i nz-icon nzType="delete" nzTheme="outline"></i></button>
+                          </div>
+                          <ng-template #disablesList>
+                              <button nzSize="small"  nz-button nzType="primary"><i nz-icon nzType="undo" nzTheme="outline"
+                                nz-popconfirm
+                                nzPopconfirmTitle="Estas seguro que quieres habilitarlo?"
+                                (nzOnConfirm)="disable(data, true)"
+                                (nzOnCancel)="cancel()"
+                                nzPopconfirmPlacement="rightBottom"
+                                nz-button
+                                
+                                ></i></button>
+                          </ng-template>
+                        </div>
+                        <div nz-col>
+                          <button nzSize="small"  nz-button nzType="primary" (click)="editableFrom(data)"><i nz-icon nzType="edit" nzTheme="outline"></i></button>
+                          
+                        </div>
+                      </td>
                       <td>{{ data.codigo }}</td>
                       <td>{{ data.descripcion }}</td>
-                      <td>{{ data.fecha  | date:'yyyy/M/dd' }}</td>
+                      <td timeZone>{{ data.fecha  | date:'yyyy/M/dd hh:MM:ss' }}</td>
                       <td>{{ data.valor }}</td>
                     </tr>
                   </tbody>
