--- a/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
+++ b/src/app/modules/menu-layout/components/contracts/factura-ehh/factura-ehh.component.html
@@ -43,6 +43,19 @@
                     </nz-form-item>
                 </div>
             </div>
+
+            <div nz-row>
+              <div nz-col>
+                <nz-form-item  nzFlex>
+                  <nz-form-control>
+                    <label>Cargo Reactivo</label>
+                    <div nz-row>
+                      <nz-input-number formControlName="cargoReactivo" style="width: 475px;"></nz-input-number>
+                    </div>
+                  </nz-form-control>
+                </nz-form-item>
+              </div>
+            </div>
             
         </form>
         <br>  
