--- a/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
+++ b/src/app/modules/menu-layout/components/contracts/modal-medidores/modal-medidores.component.html
@@ -2,7 +2,7 @@
 <div nz-col nzOffset="8" nzSpan="4" class="row1-col1">
 
     <button nz-button nzSize="small" [nzType]="'primary'" (click)="showModal()"><i nz-icon nzType="file-text" nzTheme="outline"></i></button>
-    <nz-modal [(nzVisible)]="isVisible" nzTitle="Medidores" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" nzWidth="920px" [nzStyle]="{ top: '5px' }">
+    <nz-modal [(nzVisible)]="isVisible" nzTitle="Medidores" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" nzWidth="9" [nzStyle]="{ top: '5px' }">
         <ng-container *nzModalContent>
 
 
