--- a/src/app/shared/components/menu-layout/menu-layout.component.html
+++ b/src/app/shared/components/menu-layout/menu-layout.component.html
@@ -140,7 +140,9 @@
         </span>
       <span class="header-title">SISTEMA DE FACTURACION ENERGETICA</span>
 
+        
       </div>
+      
     </nz-header>
     <nz-content>
       <div class="inner-content">
@@ -150,5 +152,6 @@
       </div>
       
     </nz-content>
+    <nz-countdown [nzValue]="deadline" [nzTitle]="'Day Level'" [nzFormat]="'D:H:m:s'"></nz-countdown>
   </nz-layout>
 </nz-layout>
