--- a/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
+++ b/src/app/modules/menu-layout/components/meters/manual-registration-modal/manual-registration-modal.component.html
@@ -1,12 +1,12 @@
 <button nz-button nzSize="small" [nzType]="'primary'" (click)="showModal()"><i nz-icon nzType="plus" nzTheme="outline"></i></button>
-    <nz-modal [(nzVisible)]="isVisible" nzTitle="Registro Manual" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()">
+    <nz-modal [(nzVisible)]="isVisible" nzTitle="Registro Manual" (nzOnCancel)="handleCancel()" (nzOnOk)="handleOk()" [nzStyle]="{ top: '5px' }">
       <ng-container *nzModalContent>
           <div nz-row>
               <div nz-col>
                 <form nz-form [formGroup]="validateForm" nzLayout="horizontal">
       
                   <div nz-row>
-                      <div nz-col>
+                      <div nz-col nzSpan="11">
                           <label>Source Id Medidor</label>
                           <div nz-row>
                               <nz-form-item  nzFlex>
@@ -19,7 +19,7 @@
                           </div>
                       </div>
       
-                      <div nz-col>
+                      <div nz-col nzSpan="11" nzOffset="1">
                           <label>Variable</label>
                           <div nz-row>
                               <nz-form-item  nzFlex>
@@ -35,7 +35,7 @@
                   </div>
       
                   <div nz-row>
-                      <div nz-col>
+                      <div nz-col nzSpan="11">
                           <label>Fecha de registro</label>
                           <div nz-row>
                               <nz-form-item  nzFlex>
@@ -46,7 +46,7 @@
                           </div>
                       </div>
       
-                      <div nz-col>
+                      <div nz-col nzSpan="11" nzOffset="1">
                           <label>Valor</label>
                           <div nz-row>
                               <nz-form-item  nzFlex>
@@ -100,9 +100,6 @@
                       <th nzWidth="100px">Variable</th>
                       <th nzCustomFilter>
                         Fecha
-                        <nz-filter-trigger [(nzVisible)]="visible" [nzActive]="searchValue.length > 0" [nzDropdownMenu]="menu">
-                          <i nz-icon nzType="search"></i>
-                        </nz-filter-trigger>
                       </th>
                       <th>Valor</th>
                     </tr>
@@ -141,7 +138,7 @@
                       </td>
                       <td>{{ data.codigo }}</td>
                       <td>{{ data.descripcion }}</td>
-                      <td timeZone>{{ data.fecha  | date:'yyyy/M/dd hh:MM:ss' }}</td>
+                      <td timeZone>{{ data.fecha  | date:'yyyy/M/dd' }}</td>
                       <td>{{ data.valor }}</td>
                     </tr>
                   </tbody>
