--- a/src/app/shared/components/digital-invoice/digital-invoice.component.html
+++ b/src/app/shared/components/digital-invoice/digital-invoice.component.html
@@ -163,12 +163,12 @@
         <br>
 
  
-<div class="titulos">
+<div class="titulos" *ngIf="dataInvoice.cargo">
     <h5>Detalle cliente regulado</h5>
     <h5>Historico consumo</h5>
 </div>       
         
-<div class="consumo-container">
+<div class="consumo-container" *ngIf="dataInvoice.cargo">
 <div class="calculo-consumo-container">
     <div>
         <table class="table table-bordered table-sm">
@@ -273,8 +273,8 @@
     </div>
     <div style="background-color: #b9b9b9; margin: 1% 3% 1% 7%;">
         <p class="totales-historico">
-            <span> Total a consumo historico:</span>
-            <span> xxxxx Lps </span>
+            <span> Promedio de consumo:</span>
+            <span> {{promedioConsumo  | number:'1.0':'en-US' }} kWh </span>
         </p>
     </div>
 </div>
